--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Merlin HTML/CSS template">
     <meta name="author" content="Hasan Alibegic">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>Merlin</title>
+    <title>My Dictionary</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" async defer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" async defer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.8.2/venobox.css" async defer>
@@ -30,7 +30,7 @@
             <div class="content cover text-center">
                 <div class="row">
                     <div class="col-sm-12">
-                        <h1 class="mt-0 mb-4 animated hiding" data-animation="fadeInDown" data-delay="300">We Are Merlin</h1>
+                        <h1 class="mt-0 mb-4 animated hiding" data-animation="fadeInDown" data-delay="300">My Dictionary</h1>
                         <a class="mt-0 mb-4 btn btn-blue nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Find more</a>
                         <h3 class="mt-0 mb-0 animated hiding" data-animation="fadeIn" data-delay="600">We Have Made A Lot Of Friends.</h3>
                     </div>
