--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div id="navbar-top">
         <nav class="navbar navbar-expand-md navbar-light bg-white fixed">
             <div class="container">
-                <a class="navbar-brand nav-external" href="#home">Merlin</a>
+                <a class="navbar-brand nav-external" href="#home">My Dictionary</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
