--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
     <div class="loader">
         <div class="loading"></div>
     </div>
-    <section id="home" class="page overlay">
-        <div class="container">
-            <div class="content cover text-center">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h1 class="mt-0 mb-4 animated hiding" data-animation="fadeInDown" data-delay="300">My Dictionary</h1>
-                        <a class="mt-0 mb-4 btn btn-blue nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Find more</a>
-                        <h3 class="mt-0 mb-0 animated hiding" data-animation="fadeIn" data-delay="600">We Have Made A Lot Of Friends.</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!--    <section id="home" class="page overlay">-->
+<!--        <div class="container">-->
+<!--            <div class="content cover text-center">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-sm-12">-->
+<!--                        <h1 class="mt-0 mb-4 animated hiding" data-animation="fadeInDown" data-delay="300">My Dictionary</h1>-->
+<!--                        <a class="mt-0 mb-4 btn btn-blue nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Find more</a>-->
+<!--                        <h3 class="mt-0 mb-0 animated hiding" data-animation="fadeIn" data-delay="600">We Have Made A Lot Of Friends.</h3>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
     </section>
     <div id="navbar-top">
         <nav class="navbar navbar-expand-md navbar-light bg-white fixed">
