deleted first div block and section(home)

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-    <div class="loader">
-        <div class="loading"></div>
-    </div>
+<!--    <div class="loader">-->
+<!--        <div class="loading"></div>-->
+<!--    </div>-->
 <!--    <section id="home" class="page overlay">-->
 <!--        <div class="container">-->
 <!--            <div class="content cover text-center">-->
@@ -37,7 +37,7 @@
 <!--                </div>-->
 <!--            </div>-->
 <!--        </div>-->
-    </section>
+<!--    </section>-->
     <div id="navbar-top">
         <nav class="navbar navbar-expand-md navbar-light bg-white fixed">
             <div class="container">
