I started to add new word cards

--- a/index.html
+++ b/index.html
@@ -1555,10 +1555,10 @@
                             <img class="img-fluid" src="img/team/1.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">John Doe</h5>
-                            <p>Web Developer</p>
+                            <h5 class="mb-1">Spouse </h5>
+                            <p>Супруг</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>My spouse is my best friend</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.facebook.com" title="Facebook">
@@ -1588,10 +1588,10 @@
                             <img class="img-fluid" src="img/team/2.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Clarinda Gratia</h5>
-                            <p>Designer</p>
+                            <h5 class="mb-1">Tiny</h5>
+                            <p>Крошечный</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>My tiny idea become a great company</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.dribbble.com" title="Dribbble">
@@ -1616,10 +1616,10 @@
                             <img class="img-fluid" src="img/team/3.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Mandeep Eimear</h5>
-                            <p>Mobile Developer</p>
+                            <h5 class="mb-1">Abandon</h5>
+                            <p>Покидатьr</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>He was abandoned by everyone</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.twitter.com" title="Twitter">
