--- a/index.html
+++ b/index.html
@@ -246,6 +246,125 @@
                             <img class="img-fluid" src="img/team/1.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
+                            <h5 class="mb-1">Spouse </h5>
+                            <p>Супруг</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>My spouse is my best friend</p>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="http://www.facebook.com" title="Facebook">
+                                        <i class="fa fa-facebook"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="http://www.twitter.com" title="Twitter">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="http://www.linkedin.com" title="LinkedIn">
+                                        <i class="fa fa-linkedin"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="http://www.github.com" title="GitHub">
+                                        <i class="fa fa-github"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/2.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
+                            <h5 class="mb-1">Tiny</h5>
+                            <p>Крошечный</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>My tiny idea become a great company</p>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="http://www.dribbble.com" title="Dribbble">
+                                        <i class="fa fa-dribbble"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="http://www.pinterest.com" title="Pinterest">
+                                        <i class="fa fa-pinterest"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="http://www.instagram.com" title="Instagram">
+                                        <i class="fa fa-instagram"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/3.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
+                            <h5 class="mb-1">Abandon</h5>
+                            <p>Покидать</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>He was abandoned by everyone</p>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="http://www.twitter.com" title="Twitter">
+                                        <i class="fa fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="http://developer.android.com/index.html" title="Android Developers">
+                                        <i class="fa fa-android"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="http://www.stackoverflow.com" title="Stack Overflow">
+                                        <i class="fa fa-stack-overflow"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInRight" data-delay="600">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/4.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
+                            <h5 class="mb-1">Wigstan Fergus</h5>
+                            <p>QA Engineer</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="http://www.plus.google.com" title="Google+">
+                                        <i class="fa fa-google-plus"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="http://www.trello.com" title="Trello">
+                                        <i class="fa fa-trello"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="mailto:john.doe@mail.com" title="Email">
+                                        <i class="fa fa-envelope"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInLeft" data-delay="600">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/1.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
                             <h5 class="mb-1">John Doe</h5>
                             <p>Web Developer</p>
                             <div class="border mt-4 mb-4"></div>
@@ -1617,7 +1736,7 @@
                         </div>
                         <div class="bio mt-4">
                             <h5 class="mb-1">Abandon</h5>
-                            <p>Покидатьr</p>
+                            <p>Покидать</p>
                             <div class="border mt-4 mb-4"></div>
                             <p>He was abandoned by everyone</p>
                             <ul class="list-inline">
