Added about 15 new word cards in my new dictionary

--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="#home">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#services">Services</a>
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link" href="#services">Services</a>-->
+<!--                        </li>-->
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link" href="#work">Work</a>-->
+<!--                        </li>-->
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link" href="#clients">Clients</a>-->
+<!--                        </li>-->
+<!--                        <li class="nav-item">-->
+                            <a class="nav-link" href="#about">My Dictionary</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#work">Work</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#clients">Clients</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
-                        </li>
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link" href="#contact">Contact</a>-->
+<!--                        </li>-->
                     </ul>
                 </div>
             </div>
@@ -236,9 +236,9 @@
         <div class="container">
             <div class="content text-center">
                 <div class="heading">
-                    <h2 class="mt-0 mb-4">About Us.</h2>
+                    <h2 class="mt-0 mb-4">My Dictionary</h2>
                     <div class="border"></div>
-                    <p class="mt-4 mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat duis aute irure dolor.</p>
+                    <p class="mt-4 mb-0">This is my new test dictionary. Here I will learn new words and phrases! Maybe something else...</p>
                 </div>
                 <div class="row">
                     <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInLeft" data-delay="600">
@@ -335,10 +335,10 @@
                             <img class="img-fluid" src="img/team/4.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Wigstan Fergus</h5>
-                            <p>QA Engineer</p>
+                            <h5 class="mb-1">Necessary </h5>
+                            <p>Необходимый</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>It's actually necessary for my success</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.plus.google.com" title="Google+">
@@ -365,10 +365,10 @@
                             <img class="img-fluid" src="img/team/1.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">John Doe</h5>
-                            <p>Web Developer</p>
+                            <h5 class="mb-1">Allow</h5>
+                            <p>Разрешать</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>I didn't allow them to play now</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.facebook.com" title="Facebook">
@@ -398,10 +398,10 @@
                             <img class="img-fluid" src="img/team/2.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Clarinda Gratia</h5>
-                            <p>Designer</p>
+                            <h5 class="mb-1">To master</h5>
+                            <p>Освоить</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>I want to master English so much</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.dribbble.com" title="Dribbble">
@@ -426,10 +426,10 @@
                             <img class="img-fluid" src="img/team/3.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Mandeep Eimear</h5>
-                            <p>Mobile Developer</p>
+                            <h5 class="mb-1">Explore </h5>
+                            <p>Исследовать</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>My kids are natural explorers</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.twitter.com" title="Twitter">
@@ -454,10 +454,10 @@
                             <img class="img-fluid" src="img/team/4.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Wigstan Fergus</h5>
-                            <p>QA Engineer</p>
+                            <h5 class="mb-1">Contradiction </h5>
+                            <p>Противоречие</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>There isn't any contradiction with my inner values</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.plus.google.com" title="Google+">
@@ -484,10 +484,10 @@
                             <img class="img-fluid" src="img/team/1.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">John Doe</h5>
-                            <p>Web Developer</p>
+                            <h5 class="mb-1">Prospective </h5>
+                            <p>Предполагаемый, ожидаемый, возможный, потенциальный</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>They was prospective criminals</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.facebook.com" title="Facebook">
@@ -517,10 +517,10 @@
                             <img class="img-fluid" src="img/team/2.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Clarinda Gratia</h5>
-                            <p>Designer</p>
+                            <h5 class="mb-1">Bless</h5>
+                            <p>Благословлять</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>My mother bless us to marriage</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.dribbble.com" title="Dribbble">
@@ -545,10 +545,10 @@
                             <img class="img-fluid" src="img/team/3.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Mandeep Eimear</h5>
-                            <p>Mobile Developer</p>
+                            <h5 class="mb-1">Regarding </h5>
+                            <p>Относительно, касательно</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>Regarding my work, I really love it</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.twitter.com" title="Twitter">
@@ -573,10 +573,10 @@
                             <img class="img-fluid" src="img/team/4.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Wigstan Fergus</h5>
-                            <p>QA Engineer</p>
+                            <h5 class="mb-1">Regardless </h5>
+                            <p>Не смотря на</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>We going for a walk regardless the weather</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.plus.google.com" title="Google+">
@@ -603,10 +603,10 @@
                             <img class="img-fluid" src="img/team/1.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">John Doe</h5>
-                            <p>Web Developer</p>
+                            <h5 class="mb-1">Regard</h5>
+                            <p>внимание, уважение, рассматривать, считаться</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>This word is almost same meaning as attention</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.facebook.com" title="Facebook">
@@ -636,10 +636,10 @@
                             <img class="img-fluid" src="img/team/2.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Clarinda Gratia</h5>
-                            <p>Designer</p>
+                            <h5 class="mb-1">Settle </h5>
+                            <p>Обосноваться поселиться</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>We settle in Crimea for our vacation</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.dribbble.com" title="Dribbble">
@@ -664,10 +664,10 @@
                             <img class="img-fluid" src="img/team/3.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Mandeep Eimear</h5>
-                            <p>Mobile Developer</p>
+                            <h5 class="mb-1">Adversity </h5>
+                            <p>Несчастье</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>Sometimes any adversity might happened</p>
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="http://www.twitter.com" title="Twitter">
