some header edition and new buttons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Merlin HTML/CSS template">
     <meta name="author" content="Hasan Alibegic">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>My Dictionary (from PyCharm)</title>
+    <title>My Dictionary</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" async defer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" async defer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.8.2/venobox.css" async defer>
@@ -31,8 +31,8 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <h1 class="mt-0 mb-4 animated hiding" data-animation="fadeInDown" data-delay="300">My Dictionary</h1>
-                        <a class="mt-0 mb-4 btn btn-blue nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#services">Find more</a>
-                        <h3 class="mt-0 mb-0 animated hiding" data-animation="fadeIn" data-delay="600">We Have Made A Lot Of Friends.</h3>
+                        <a class="mt-0 mb-4 btn btn-blue nav-external animated hiding" data-animation="fadeIn" data-delay="900" href="#about">Go on</a>
+                        <h3 class="mt-0 mb-0 animated hiding" data-animation="fadeIn" data-delay="600">This is my new test dictionary. Here I will learn new words and phrases! Maybe something else...</h3>
                     </div>
                 </div>
             </div>
