Added some new words

--- a/index.html
+++ b/index.html
@@ -687,15 +687,15 @@
 <!--                            </ul>-->
                         </div>
                     </div>
-<!--                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInRight" data-delay="600">-->
-<!--                        <div class="profile-photo">-->
-<!--                            <img class="img-fluid" src="img/team/4.jpg" alt="">-->
-<!--                        </div>-->
-<!--                        <div class="bio mt-4">-->
-<!--                            <h5 class="mb-1">Wigstan Fergus</h5>-->
-<!--                            <p>QA Engineer</p>-->
-<!--                            <div class="border mt-4 mb-4"></div>-->
-<!--                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>-->
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInRight" data-delay="600">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/4.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
+                            <h5 class="mb-1">Vibes</h5>
+                            <p>Атмосфера, Энергетика</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>Our vacation vibes is perfect</p>
 <!--                            <ul class="list-inline">-->
 <!--                                <li class="list-inline-item">-->
 <!--                                    <a href="http://www.plus.google.com" title="Google+">-->
@@ -713,19 +713,19 @@
 <!--                                    </a>-->
 <!--                                </li>-->
 <!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                        </div>
+                    </div>
 <!--                </div>-->
-<!--                <div class="row">-->
-<!--                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInLeft" data-delay="600">-->
-<!--                        <div class="profile-photo">-->
-<!--                            <img class="img-fluid" src="img/team/1.jpg" alt="">-->
-<!--                        </div>-->
-<!--                        <div class="bio mt-4">-->
-<!--                            <h5 class="mb-1">John Doe</h5>-->
-<!--                            <p>Web Developer</p>-->
-<!--                            <div class="border mt-4 mb-4"></div>-->
-<!--                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>-->
+                <div class="row">
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInLeft" data-delay="600">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/1.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
+                            <h5 class="mb-1">Delay</h5>
+                            <p>Задерживать</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>Our departure was delayed</p>
 <!--                            <ul class="list-inline">-->
 <!--                                <li class="list-inline-item">-->
 <!--                                    <a href="http://www.facebook.com" title="Facebook">-->
@@ -748,17 +748,17 @@
 <!--                                    </a>-->
 <!--                                </li>-->
 <!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">-->
-<!--                        <div class="profile-photo">-->
-<!--                            <img class="img-fluid" src="img/team/2.jpg" alt="">-->
-<!--                        </div>-->
-<!--                        <div class="bio mt-4">-->
-<!--                            <h5 class="mb-1">Clarinda Gratia</h5>-->
-<!--                            <p>Designer</p>-->
-<!--                            <div class="border mt-4 mb-4"></div>-->
-<!--                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>-->
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/2.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
+                            <h5 class="mb-1">Encurage</h5>
+                            <p>Поощрение</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>I encourage my kids to talk about theirs emotions</p>
 <!--                            <ul class="list-inline">-->
 <!--                                <li class="list-inline-item">-->
 <!--                                    <a href="http://www.dribbble.com" title="Dribbble">-->
@@ -776,17 +776,17 @@
 <!--                                    </a>-->
 <!--                                </li>-->
 <!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">-->
-<!--                        <div class="profile-photo">-->
-<!--                            <img class="img-fluid" src="img/team/3.jpg" alt="">-->
-<!--                        </div>-->
-<!--                        <div class="bio mt-4">-->
-<!--                            <h5 class="mb-1">Mandeep Eimear</h5>-->
-<!--                            <p>Mobile Developer</p>-->
-<!--                            <div class="border mt-4 mb-4"></div>-->
-<!--                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>-->
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/3.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
+                            <h5 class="mb-1">Gain</h5>
+                            <p>Прирост</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>The gain of my income is about 15% per year</p>
 <!--                            <ul class="list-inline">-->
 <!--                                <li class="list-inline-item">-->
 <!--                                    <a href="http://www.twitter.com" title="Twitter">-->
@@ -804,17 +804,17 @@
 <!--                                    </a>-->
 <!--                                </li>-->
 <!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInRight" data-delay="600">-->
-<!--                        <div class="profile-photo">-->
-<!--                            <img class="img-fluid" src="img/team/4.jpg" alt="">-->
-<!--                        </div>-->
-<!--                        <div class="bio mt-4">-->
-<!--                            <h5 class="mb-1">Wigstan Fergus</h5>-->
-<!--                            <p>QA Engineer</p>-->
-<!--                            <div class="border mt-4 mb-4"></div>-->
-<!--                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>-->
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInRight" data-delay="600">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/4.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
+                            <h5 class="mb-1"Regain</h5>
+                            <p>Прирост</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>I need to regain my health after surgery</p>
 <!--                            <ul class="list-inline">-->
 <!--                                <li class="list-inline-item">-->
 <!--                                    <a href="http://www.plus.google.com" title="Google+">-->
@@ -832,19 +832,19 @@
 <!--                                    </a>-->
 <!--                                </li>-->
 <!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="row">-->
-<!--                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInLeft" data-delay="600">-->
-<!--                        <div class="profile-photo">-->
-<!--                            <img class="img-fluid" src="img/team/1.jpg" alt="">-->
-<!--                        </div>-->
-<!--                        <div class="bio mt-4">-->
-<!--                            <h5 class="mb-1">John Doe</h5>-->
-<!--                            <p>Web Developer</p>-->
-<!--                            <div class="border mt-4 mb-4"></div>-->
-<!--                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>-->
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInLeft" data-delay="600">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/1.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
+                            <h5 class="mb-1">Outcome</h5>
+                            <p>Исход</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>Outcome of my last project was total success...</p>
 <!--                            <ul class="list-inline">-->
 <!--                                <li class="list-inline-item">-->
 <!--                                    <a href="http://www.facebook.com" title="Facebook">-->
@@ -867,17 +867,17 @@
 <!--                                    </a>-->
 <!--                                </li>-->
 <!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">-->
-<!--                        <div class="profile-photo">-->
-<!--                            <img class="img-fluid" src="img/team/2.jpg" alt="">-->
-<!--                        </div>-->
-<!--                        <div class="bio mt-4">-->
-<!--                            <h5 class="mb-1">Clarinda Gratia</h5>-->
-<!--                            <p>Designer</p>-->
-<!--                            <div class="border mt-4 mb-4"></div>-->
-<!--                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>-->
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/2.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
+                            <h5 class="mb-1">Predict</h5>
+                            <p>Предсказывать</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>...regardless almost everyone predicted lose for me</p>
 <!--                            <ul class="list-inline">-->
 <!--                                <li class="list-inline-item">-->
 <!--                                    <a href="http://www.dribbble.com" title="Dribbble">-->
@@ -895,17 +895,17 @@
 <!--                                    </a>-->
 <!--                                </li>-->
 <!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">-->
-<!--                        <div class="profile-photo">-->
-<!--                            <img class="img-fluid" src="img/team/3.jpg" alt="">-->
-<!--                        </div>-->
-<!--                        <div class="bio mt-4">-->
-<!--                            <h5 class="mb-1">Mandeep Eimear</h5>-->
-<!--                            <p>Mobile Developer</p>-->
-<!--                            <div class="border mt-4 mb-4"></div>-->
-<!--                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>-->
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInUp" data-delay="300">
+                        <div class="profile-photo">
+                            <img class="img-fluid" src="img/team/3.jpg" alt="">
+                        </div>
+                        <div class="bio mt-4">
+                            <h5 class="mb-1">Sensation</h5>
+                            <p>Ощущение</p>
+                            <div class="border mt-4 mb-4"></div>
+                            <p>It was incredible sensation </p>
 <!--                            <ul class="list-inline">-->
 <!--                                <li class="list-inline-item">-->
 <!--                                    <a href="http://www.twitter.com" title="Twitter">-->
@@ -923,8 +923,8 @@
 <!--                                    </a>-->
 <!--                                </li>-->
 <!--                            </ul>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                        </div>
+                    </div>
 <!--                    <div class="col-md-3 col-sm-6 col-xs-12 teammate animated hiding" data-animation="fadeInRight" data-delay="600">-->
 <!--                        <div class="profile-photo">-->
 <!--                            <img class="img-fluid" src="img/team/4.jpg" alt="">-->
