--- a/index.html
+++ b/index.html
@@ -2693,7 +2693,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.appear/0.3.3/jquery.appear.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/venobox/1.8.2/venobox.min.js"></script>
     <script src="js/script.js?v=1.0"></script>
-    <!-- Google Analytics: change UA-25089888-9 to be your site's ID. -->
+    <!-- Google Analytics: change UA-25089888-9 to be your my-dictionary's ID. -->
     <script>
         (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
         function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
