--- a/index.html
+++ b/index.html
@@ -849,10 +849,10 @@
                             <img class="img-fluid" src="img/team/4.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Wigstan Fergus!!!</h5>
-                            <p>QA Engineer</p>
+                            <h5 class="mb-1">Necessary</h5>
+                            <p>Необходимый </p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>Does he have the necessary skills and experience?</p>
                         </div>
                     </div>
                 </div>
