Added new words

--- a/index.html
+++ b/index.html
@@ -865,10 +865,10 @@
                             <img class="img-fluid" src="img/team/1.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">John Doe</h5>
-                            <p>Web Developer</p>
+                            <h5 class="mb-1">Urge</h5>
+                            <p>Призывать</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>His parents urged him to go to university.</p>
                         </div>
                     </div>
 
@@ -877,10 +877,10 @@
                             <img class="img-fluid" src="img/team/2.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Clarinda Gratia</h5>
-                            <p>Designer</p>
+                            <h5 class="mb-1">Masterpiece</h5>
+                            <p>Шедевр </p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>'Mona Lisa' is widely regarded as Leonardo da Vinci's masterpiece.</p>
                         </div>
                     </div>
 
@@ -890,10 +890,10 @@
                             <img class="img-fluid" src="img/team/3.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Mandeep Eimear</h5>
-                            <p>Mobile Developer</p>
+                            <h5 class="mb-1">Besides</h5>
+                            <p>Кромеr</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>Do you play any other sports besides football?</p>
                         </div>
                     </div>
 
@@ -903,10 +903,10 @@
                             <img class="img-fluid" src="img/team/4.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">Wigstan Fergus</h5>
-                            <p>QA Engineer</p>
+                            <h5 class="mb-1">Amend</h5>
+                            <p>Вносить изменения </p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>The contract has now been amended.</p>
                         </div>
                     </div>
                 </div>
@@ -919,10 +919,10 @@
                             <img class="img-fluid" src="img/team/1.jpg" alt="">
                         </div>
                         <div class="bio mt-4">
-                            <h5 class="mb-1">John Doe</h5>
-                            <p>Web Developer</p>
+                            <h5 class="mb-1">Hang out</h5>
+                            <p>Постоянно бывать, околачиваться</p>
                             <div class="border mt-4 mb-4"></div>
-                            <p>Lorem ipsum dolor sit, consetetur sadipscing elitr, diam nonumy eirmod tempor invidunt ut labore.</p>
+                            <p>The local kids hang out at the mall.</p>
                         </div>
                     </div>
 
